--- a/pom.xml
+++ b/pom.xml
@@ -88,8 +88,10 @@
 							<version>1.5.5.Final</version>
 						</path>
 					</annotationProcessorPaths>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                </configuration>
+					<release>17</release>
+					<!---enable-preview satırı kaldırıldı -->
+
+				</configuration>
 			</plugin>
 
 
